# code-evolution

./: .gitignore  README.md
apps/web-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web-ui/src/: App.tsx  api.ts  types.ts
services/engine-rust/: Cargo.toml
services/engine-rust/src/: api.rs  error.rs  evolve.rs  genome.rs  main.rs  models.rs  rng.rs  vm.rs
services/fitness-python/: pyproject.toml
services/fitness-python/fitness_service/: __init__.py  main.py  models.py  scoring.py  tasks.py
shared/schema/: openapi.yaml
